.k8s/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  namespace: kube-system
spec:
  controller: k8s.io/ingress-nginx
