.k8s/externalname-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: database-1.chheppac9ozc.us-east-1.rds.amazonaws.com
