.k8s/flaskservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskservice
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskservice
  template:
    metadata:
      labels:
        app: flaskservice
    spec:
      containers:
      - name: flaskservice
        image: public.ecr.aws/sctp-sandbox/stephen-flask-crud:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-react-app
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app: flaskservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
